--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@types/lodash": "^4.14.134",
     "@types/react-tooltip": "^3.9.2",
+    "classnames": "^2.2.6",
     "gatsby": "^2.8.6",
     "gatsby-image": "^2.1.2",
     "gatsby-plugin-manifest": "^2.1.1",
