--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@types/classnames": "^2.2.8",
     "@types/lodash": "^4.14.134",
     "@types/react-tooltip": "^3.9.2",
     "classnames": "^2.2.6",
@@ -23,7 +24,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
-    "react-tooltip": "^3.10.0"
+    "react-tooltip": "^3.10.0",
+    "react-use": "^9.7.0"
   },
   "devDependencies": {
     "@types/react": "^16.8.19",
