--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gatsby": "^2.11.6",
     "gatsby-image": "^2.1.2",
     "gatsby-plugin-google-tagmanager": "^2.1.1",
-    "gatsby-plugin-manifest": "^2.1.1",
+    "gatsby-plugin-manifest": "^2.4.34",
     "gatsby-plugin-offline": "^2.1.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sentry": "^1.0.1",
@@ -25,6 +25,7 @@
     "jest": "^24.8.0",
     "lodash": "^4.17.11",
     "prop-types": "^15.7.2",
+    "puppeteer": "^2.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
