add fixed version for sharp so the build works also in netlify

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "resolutions": {
+    "sharp": "0.24.0"
+  },
   "dependencies": {
     "@types/classnames": "^2.2.8",
     "@types/jest": "^24.0.15",
