--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash": "^4.17.11",
     "prop-types": "^15.7.2",
     "puppeteer": "^2.1.1",
+    "rc-slider": "^9.5.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
